--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./port.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
