--- a/index.html
+++ b/index.html
@@ -3,66 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>WebStudio</title>
   </head>
   <body>
     <!--Хедер сайту-->
     <header>
       <!--Навігація-->
       <nav>
-        <a href="/index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo"
+          >Web<span class="black-logo">Studio</span></a
+        >
+        <ul class="site-nav list">
           <li>
-            <a href="">Студия</a>
+            <a href="" class="nav-link current">Студия</a>
           </li>
           <li>
-            <a href="./port.html">Портфолио</a>
+            <a href="./portfolio.html" class="nav-link">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="nav-link">Контакты</a>
           </li>
         </ul>
       </nav>
       <!--Контакти-->
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:0961111111">+38 096 111 11 11</a>
+      <address class="head-contacts">
+        <a href="mailto:info@devstudio.com" class="head-link"
+          >info@devstudio.com</a
+        >
+        <a href="tel:0961111111" class="head-link">+38 096 111 11 11</a>
       </address>
     </header>
     <main>
       <!--Герой сайту-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+      <section class="hero">
+        <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
+        <a href="" class="hero-button">Заказать услугу</a>
       </section>
       <!--Наші переваги-->
-      <section>
+      <section class="advantages">
         <h2>Наши преимущества</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="advantages-title">Внимание к деталям</h3>
+            <p class="advantages-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="advantages-title">Пунктуальность</h3>
+            <p class="advantages-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="advantages-title">Планирование</h3>
+            <p class="advantages-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="advantages-title">Современные технологии</h3>
+            <p class="advantages-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -70,9 +83,9 @@
         </ul>
       </section>
       <!--Наші проекти-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="projects">
+        <h2 class="projects-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <a href="">
               <img
@@ -106,75 +119,64 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
           <li>
-            <figure>
-              <img
-                src="./images/member1.jpg"
-                alt="Фото співробітника"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Игорь Демьяненко</p>
-                <p><small>Product Designer</small></p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/member1.jpg"
+              alt="Фото співробітника"
+              width="270"
+              height="260"
+            />
+            <h3 class="member">Игорь Демьяненко</h3>
+            <p class="member-text">Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/member2.jpg"
-                alt="Фото співробітника"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Ольга Репина</p>
-                <p><small>Frontend Developer</small></p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/member2.jpg"
+              alt="Фото співробітника"
+              width="270"
+              height="260"
+            />
+
+            <h3 class="member">Ольга Репина</h3>
+            <p class="member-text">Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/member3.jpg"
-                alt="Фото співробітника"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Николай Тарасов</p>
-                <p><small>Marketing</small></p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/member3.jpg"
+              alt="Фото співробітника"
+              width="270"
+              height="260"
+            />
+            <h3 class="member">Николай Тарасов</h3>
+            <p class="member-text">Marketing</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/member4.jpg"
-                alt="Фото співробітника"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p>Михаил Ермаков</p>
-                <p><small>UI Designer</small></p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/member4.jpg"
+              alt="Фото співробітника"
+              width="270"
+              height="260"
+            />
+            <h3 class="member">Михаил Ермаков</h3>
+            <p class="member-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer-box">
+      <a href="./index.html" class="logo"
+        >Web<span class="white-logo">Studio</span></a
+      >
+      <address class="foot-contacts">
+        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@devstudio.com" class="foot-link"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="foot-link">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
